[package]
name = "asxk"
version = "0.1.0"
authors = ["mitchell-conrad <mitchell.w.conrad@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version="0.4", features = ["serde"]}
diesel = { version="1.4.0", features = ["sqlite","postgres","chrono"] }
structopt = "0.2.14"
csv = "1.0"
dotenv = "0.13.0"
serde_derive = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
reqwest = "0.9.0"